<resources>
    <string name="app_name">H2T_DMS_MANAGER</string>
    <string name="errorPrefix">"Vui lòng, "</string>
    <string name="errorBlankUsername">Vui lòng kiểm tra lại tên đăng nhập, độ dài tên đăng nhập từ 4 đến 50 kí
        tự</string>
    <string name="errorJoin">" và "</string>
    <string name="errorBlankPassword">Vui lòng kiểm tra lại mật khẩu, , độ dài tên mật khẩu từ 6 đến 50 kí tự</string>
    <string name="dialogNewEmployee">Thêm nhân viên</string>
    <string name="dialogPleaseWaitForAddEmployee">Vui lòng chờ để chương trình thêm nhân viên vào</string>
    <string name="errorMismatchPassword">Vui lòng,kiểm tra lại mật khẩu</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="notifyAddNewEmployeeSuccess">Thêm nhân viên kinh doanh mới thành công</string>
    <string name="errorLogin">Tên tài khoản hoặc mật khẩu bạn vừa nhập không chính xác</string>
    <string name="lvEmptyEmployee">Hiện không có nhân viên nào trong danh sách</string>
    <string name="btnEmployeeManagement">Quản lý nhân viên</string>
    <string name="btnStreetDivide">Phân chia tuyến đường</string>
    <string name="lvEmployeeManagementEmpty">Hiện không có nhân viên nào, vui lòng nhấn nút \'+\' ở phía trên</string>
    <string name="hintUsername">Tên đăng nhập</string>
    <string name="tvEmployeeManagementViewDetail">Xem chi tiết</string>
    <string name="tvLastNameFirstName">Họ và tên</string>
    <string name="hintLastNameFirstName">Họ và tên</string>
    <string name="tvContactInfo">Thông tin liên lạc</string>
    <string name="tvPhoneNumber">Số điện thoại</string>
    <string name="tvAddress">Địa chỉ</string>
    <string name="tvGender">Giới tính</string>
    <string name="tvBirthDay">Ngày sinh</string>
    <string name="tvDate">Ngày</string>
    <string name="tvIdentifyCardNumber">Chứng minh nhân dân</string>
    <string name="PleaseWait">Vui lòng chờ...</string>
    <string name="tvUserInfo">Thông tin tài khoản</string>
    <string name="tvUsername">Tên đăng nhập</string>
    <string name="tvPassword">Mật khẩu</string>
    <string name="tvReTypingPassword">Nhập lại mật khẩu</string>
    <string name="tvContactInformation">Thông tin liên lạc</string>
    <string name="done">Xong</string>
    <string name="cancel">Hủy</string>
    <string name="tvSignIn">Đăng Nhập</string>
    <string name="H2TDMS">H2T DMS</string>
    <string name="btnCreate">Tạo</string>
    <string name="delete">Xóa</string>
    <string name="redo">Trở lại</string>
    <string name="chooseFillColor">Chọn màu tô</string>
    <string name="transparentLevel">Độ đậm nhạt</string>
    <string name="chooseStrokeColor">Chọn màu viền</string>
    <string name="preview">Xem trước</string>
    <string name="notFoundError">#Không tìm thấy#</string>
    <string name="list_product_ex_price">Price</string>
    <string name="list_product_ex_unit">Unit</string>
    <string name="list_product_ex_name">Name</string>
    <string name="productEmpty">Hiện không có sản phẩm nào trong danh mục, vui lòng nhấn \'+\' để thêm sản phẩm</string>
    <string name="productName">Tên sản phẩm</string>
    <string name="Unit">Đơn vị tính</string>
    <string name="Price">Giá</string>
    <string name="addProduct">Thêm sản phẩm</string>
    <string name="Cancel">Hủy bỏ</string>
    <string name="productManagement">Quản lý sản phẩm</string>
    <string name="storePointManagement">Quản lý điểm bán hàng</string>
    <string name="choose">Chọn</string>
    <string name="addNewEmployee">Thêm nhân viên</string>
    <string name="logOut">Đăng xuất</string>
    <string name="addNewProduct">Thêm sản phẩm</string>
    <string name="error_dont_have_camera">Thiết bị cầm tay của bạn không hỗ trợ camera!</string>
    <string name="errorBlankFirstNameLastName">Vui lòng nhập họ và tên</string>
    <string name="errorBlankPhoneNumber">Vui lòng điền số điện thoại</string>
    <string name="errorBlankAddress">Vui lòng thêm địa chỉ vào</string>
    <string name="errorBlankCMND">Vui lòng điền số CMND</string>
    <string name="searchEmployeeName">Tìm tên nhân viên</string>
    <string name="streetDivideToEmployeeSuccess">Chia tuyến đường/khu vực cho nhân viên thành công</string>
    <string name="createArea">Tạo tuyến đường</string>
    <string name="areYouSureYouWantToCreateArea">Bạn có chắc là bạn muốn tạo tuyến đường này không?</string>
    <string name="approve">Xác nhận</string>
    <string name="pushNotificationStreetDivide">" đã tạo 1 tuyến đường mới cho bạn khảo sát, vui lòng cập nhật lại"</string>
    <string name="deleteAllStorePointAndArea">Xóa hết tất cả các điểm và khu vực/tuyến đường</string>
    <string name="areYouSureYouWantToRemoveAllArea">Bạn có chắc là bạn muốn xóa hết khu vực/tuyến đường trong phiên
        làm việc hiện tại không?</string>
    <string name="couldNotUnDoAction">Không thể quay lại(undo) được</string>
    <string name="couldNotRedoAction">Không thể hồi lại(redo) được</string>
    <string name="cannotConnectInternetPleaseCheck">Không thể kết nối mạng, vui lòng kiểm tra đường truyền</string>
    <string name="addNewProductSuccess">Thêm mới sản phẩm thành công</string>
    <string name="save">Lưu lại</string>
    <string name="updateProductInfomationSuccess">Cập nhật thông tin sản phẩm thành công</string>
    <string name="errorBlankProductName">Vui lòng nhập tên sản phẩm</string>
    <string name="errorBlankProductUnit">Vui lòng nhập đơn vị tính của sản phẩm</string>
    <string name="errorBlankProductPrice">Vui lòng nhập giá cho sản phẩm</string>
    <string name="errorEmptyProductPhoto">Vui lòng đính kèm ảnh sản phẩm</string>
    <string name="unitDesciption">"Đơn vị tính: "</string>
    <string name="proceDescripti">"Giá: "</string>
    <string name="priceVND">Giá (VNĐ)</string>
    <string name="addPhoto">Thêm hình ảnh</string>
    <string name="takePhoto">Chụp ảnh</string>
    <string name="choosePhoto">Chọn ảnh</string>
    <string name="removePhoto">Xóa ảnh</string>
    <string name="VND">VNĐ</string>
    <string name="userInformationManagement">Quản lý thông tin cá nhân</string>
    <string name="viewReport">Xem báo cáo</string>
    <string name="promotionManagement">Quản lý khuyến mãi</string>
    <string name="confirmLogOut">Bạn có chắc là bạn muốn đăng xuất ra khỏi hệ thống không?</string>
    <string name="confirmExit">Ấn nút \'trở về\' lần nữa để thoát chương trình</string>
    <string name="lockEmployee">Khoá nhân viên</string>
    <string name="viewLockedEmployee">Xem danh sách nhân viên bị khóa</string>
    <string name="employeeManagementTitle">Quản lý nhân viên</string>
    <string name="employeeNewTitle">Thêm nhân viên mới</string>
    <string name="productManagementTitle">Quản lý sản phẩm</string>
    <string name="productNewTitle">Thêm sản phẩm mới</string>
    <string name="promotionManagemenTitle">Quản lý thông tin khuyến mãi</string>
    <string name="storeManagementTitle">Quản lý điểm bán hàng</string>
    <string name="streetDivide_NVQL_Title">Phân chia tuyến đuờng khảo sát</string>
    <string name="streetDivide_NVQL_V_Title">Phân chia khu vực khảo sát</string>
    <string name="streetDivide_GDKD_Title">Phân chia vùng khảo sát</string>
    <string name="userInformationManagementTitle">Quản lý thông tin cá nhân</string>
    <string name="loginTitle">Đăng nhập vào chương trình</string>
    <string name="dashboardTitle">Màn hình chính</string>
    <string name="changePassword">Thay đổi mật khẩu</string>
    <string name="currentPassword">Mật khẩu hiện tại</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="newPasswordAgain">Nhập lại mật khẩu</string>
    <string name="errorChangePassword_CurrentPasswordLength"><![CDATA[Độ dài của mật khẩu hiện tại phải > 6 kí tự]]></string>
    <string name="errorChangePassword_PasswordMismatch">Mật khẩu mới và mật khẩu mới nhập lại không trùng khớp</string>
    <string name="errorChangePassword_NewPasswordLength"><![CDATA[Độ dài của mật khẩu mới phải > 6 kí tự]]></string>
    <string name="changePasswordSuccess">Thay đổi mật khẩu thành công</string>
    <string name="errorChangePassword_WrongCurrentPassword">Mật khẩu hiện tại không đúng</string>
    <string name="updateUserInformationSuccess">Cập nhật thông tin người dùng thành công</string>
    <string name="lock_Unlocked">Mở khóa</string>
    <string name="pleaseChooseOneOfEmployeeInList">Vui lòng chọn 1 trong các nhân viên bên dưới</string>
    <string name="lockThisEmployee">Khóa nhân viên này</string>
    <string name="confirmLockUser">Bạn có chắc là bạn muốn khóa nhân viên này?</string>
    <string name="productNewUpdateTitle">Cập nhật thông tin sản phẩm</string>
    <string name="onlyManagerAreAllowedToLogin">Chỉ nhân viên quản lý mới được đăng nhập vào chương trình này</string>
    <string name="errorLogin_UserIsLocked">Tài khoản này đã bị khóa, vui lòng liên hệ quản lý để biết thêm</string>
    <string name="errorBlankEmployeePhoto">Vui lòng đính kèm ảnh cá nhân</string>
    <string name="errorBlankBirthDate">Vui lòng chọn ngày sinh</string>
    <string name="unlockEmployeeSuccess">Mở khóa cho nhân viên thành công</string>
    <string name="lockEmployeeSuccess">Khóa nhân viên thành công</string>
    <string name="of">của</string>
    <string name="invoiceOwner">Người đặt hàng</string>
    <string name="errorRequire2PointForStreetDivide">Cần có ít nhất 2 điểm để tạo tuyến đường</string>
    <string name="store">Cửa hàng</string>
    <string name="clickToViewStoreDetail"><![CDATA[>> Nhấn để xem chi tiết cửa hàng]]></string>
    <string name="storeName">Tên cửa hàng</string>
    <string name="hintStoreName">Nhập tên cửa hàng</string>
    <string name="storeOwner">Tên chủ cửa hàng</string>
    <string name="hintStoreOwner">Nhập tên chủ cửa hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="hintAddress">Nhập địa chỉ</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="hintPhoneNumber">Nhập số điện thoại</string>
    <string name="storeType">Loại cửa hàng</string>
    <string name="trungBay">Trưng bày</string>
    <string name="viewAndCaptureImage">Xem và chụp ảnh</string>
    <string name="totalImageCapture">0 bức ảnh đã chụp</string>
    <string name="income">Doanh thu (VNĐ/Tháng)</string>
    <string name="hintIncome">Nhập doanh thu</string>
    <string name="competitiveProduct">Mặt hàng đối thủ cạnh tranh</string>
    <string name="hintCompetitiveProduct">Nhập mặt hàng đối thủ cạnh tranh</string>
    <string name="update">Cập nhật</string>
    <string name="previous">Quay về</string>
    <string name="createdDate">Ngày tạo:</string>
    <string name="yes">Đồng ý</string>
    <string name="errorInputIncome">Vui lòng nhập doanh thu</string>
    <string name="errorInputStoreName">Vui lòng nhập tên cửa hàng, tên cửa hàng không được quá 100 kí tự</string>
    <string name="errorInputStoreOwner">Vui lòng nhập tên chủ cửa hàng, tên chủ cửa hàng không được quá 100 kí tự</string>
    <string name="errorInputAddress">Vui lòng nhập địa chỉ</string>
    <string name="errorInputPhoneNumber">Vui lòng nhập số điện thoại,độ dài số điện thoại dài nhất là 11 kí tự</string>
    <string name="add">Thêm</string>
    <string name="attendanceManagement">Quản lý chấm công</string>
    <string name="viewFeedback">Xem phản hồi điểm bán hàng</string>
    <string name="hintUnit">Nhập đơn vị tính</string>
    <string name="hintProductName">Nhập tên sản phẩm</string>
    <string name="fromDate">Từ ngày:</string>
    <string name="fromDateHint">Từ ngày...</string>
    <string name="toDate">Đến ngày:</string>
    <string name="toDateHint">Đến ngày...</string>
    <string name="employeeList">Danh sách nhân viên</string>
    <string name="invoiceCreateDate">Ngày đặt hàng</string>
    <string name="invoiceTotalPrice">Tổng tiền:</string>
    <string name="invoice">Đơn hàng</string>
    <string name="invoiceManagement">Quản lý đơn hàng</string>
    <string name="status">Tình trang:</string>
</resources>