<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/fromDate"/>
        <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/activity_attendance_management_et_from_date"
                android:layout_width="0dp"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp"
                android:layout_height="wrap_content"
                bootstrap:be_roundedCorners="true"
                android:drawableLeft="@drawable/ic_action_go_to_today"
                android:drawableStart="@drawable/ic_action_go_to_today"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/fromDateHint"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/toDate"/>
        <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/activity_attendance_management_et_to_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                bootstrap:be_roundedCorners="true"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_go_to_today"
                android:drawableStart="@drawable/ic_action_go_to_today"

                android:hint="@string/toDateHint"/>
    </LinearLayout>
    <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employeeList"
            style="?android:textAppearanceLarge"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ListView
            android:id="@+id/activity_attendance_management_lv_employee"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </ListView>
    <TextView
            android:id="@+id/activity_attendance_management_tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lvEmptyEmployee"
            style="?android:textAppearanceMedium"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>
    <ProgressBar
            android:id="@+id/activity_attendance_management_progressbar"
            style="@android:style/Widget.Holo.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />
    </RelativeLayout>
</LinearLayout>