<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/dialog_change_password_et_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currentPassword"
            bootstrap:bb_roundedCorners="true"
            bootstrap:bb_type="default"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            />
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/dialog_change_password_et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword"
            bootstrap:bb_roundedCorners="true"
            bootstrap:bb_type="default"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            />
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/dialog_change_password_et_new_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPasswordAgain"
            bootstrap:bb_roundedCorners="true"
            bootstrap:bb_type="default"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            />
    <LinearLayout
            android:id="@+id/activity_user_information_management_layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/activity_user_information_management_layout_edit_cmnd">

        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/dialog_user_information_management_btn_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                bootstrap:bb_type="success"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_icon_left="fa-plus-square"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/done"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/dialog_user_information_management_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                bootstrap:bb_type="danger"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_icon_left="fa-sign-out"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>